tests/invalid/Parsing_Invalid_12.whiley
function f(int x) -> (int r):
    switch(x):
     case 1:
      return 0
     case 1:
      return 1
    //
    return 0